Bug 437625 - Color model area of Advanced Color Selector doesn't change when selecting red
Summary: Color model area of Advanced Color Selector doesn't change when selecting red
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 434268 437270 439758 447529 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-24 19:14 UTC by acc4commissions
Modified: 2022-01-06 20:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-05-24 19:14:08 UTC
SUMMARY
happens in both 4.x and 5.0 prealpha (git d1a1874)

It seems only happen with red.

STEPS TO REPRODUCE
1. Open Select a Color window and type any number in Red channel value. Green and Blue have to be 0. 
2. Paint with that color on canvas, with full opacity.
3. Select any other colors in Advanced Color Selector.
4. With Color Picker, try to select back to the red you painted.

OBSERVED RESULT
The Hue in ACS changes, but the color of square(or triangle) inside doesn't change and remains as previous color.

EXPECTED RESULT
It should change.

SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-05-29 09:50:31 UTC
*** Bug 437270 has been marked as a duplicate of this bug. ***
Comment 2 Ahab Greybeard 2021-05-29 13:11:11 UTC
I can confirm this for the 4.4.3 appimage and the May 28 5.0.0-prealpha (git 9db743c) appimage on Debian 10.
It doesn't happen with the 4.4.2 appimage, hence regression.
Comment 3 Lynx3d 2021-06-07 02:38:06 UTC
Git commit 164c801dff152a6c096e93fb896c86e8eff7b8d3 by Mathias Wein.
Committed on 07/06/2021 at 02:32.
Pushed by mwein into branch 'master'.

Fix update issues of Advanced Color Selector

This rewrites commit d6689ca1da818c8b638d5423ac8a4fc3c23afa18

0.0 is definitely a valid value, so we must accept it.
Apparently some RGB conversion functions can yield values slightly above
1.0, but then they should be actually clamped.

Only negative values really need to be skipped because those
indicate undefined values.

M  +42   -42   plugins/dockers/advancedcolorselector/kis_color_selector_component.cpp

https://invent.kde.org/graphics/krita/commit/164c801dff152a6c096e93fb896c86e8eff7b8d3
Comment 4 Ahab Greybeard 2021-07-13 15:51:29 UTC
*** Bug 439758 has been marked as a duplicate of this bug. ***
Comment 5 Lynx3d 2021-12-26 09:00:19 UTC
*** Bug 447529 has been marked as a duplicate of this bug. ***
Comment 6 Tiar 2022-01-06 20:55:39 UTC
*** Bug 434268 has been marked as a duplicate of this bug. ***