Fix update issues of Advanced Color Selector

This rewrites commit d6689ca1da818c8b638d5423ac8a4fc3c23afa18

0.0 is definitely a valid value, so we must accept it.
Apparently some RGB conversion functions can yield values slightly above
1.0, but then they should be actually clamped.

Only negative values really need to be skipped because those
indicate undefined values.

BUG:437625